# robot_programming

./: CMakeLists.txt  Presentation.md  README.md  package.xml
launch/: garry_p1_and_garry_p2.launch  grape_bunch_counter.launch
scripts/: bug1.py  bug2.py  bug2_orginal.py  follow_wall.py  garry_mover.py  garry_p1.py  garry_p2.py  go_to_point.py  grape_bunch_counter.py  homing_beacon.py  homing_beacon_2.py  image_saver.py  opencv_test.py  robot_move.py  rotate.py
scripts/Old/: avoid_obsticle.py  hsv_range_detector.py  image_saver.py  obstacle_avoidance.py  robot_move.py  wall_follower.py
