<?xml version="1.0"?>
<package format="2">
  <name>rp_assignment_1</name>
  <version>0.1.0</version>
  <description>The rp_assignment_1 package</description>

  <maintainer email="18685030@students.lincoln.ac.uk">garry</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/rp_assignment_1</url> -->
  <author email="18685030@students.lincoln.ac.uk">Garry Clawson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
